# skrybson_ai

./: .env  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  align.py  bench.py  docker-compose.gpu.yml  docker-compose.yml  gui.py  index.js  package.json  pyproject.toml  requirements-align.txt  requirements-dev.txt  requirements.txt  transcribe.py
.github/workflows/: ci.yml
bench/: manifest.json
bench/results/: latest_metrics.json  precomputed.json
bench/samples/: README.md
docs/: bench.md  sanity_report.md
docs/runbooks/: github_actions_ci.md  wsl.md
tests/: test_transcribe_utils.py
tests/ui/: test_app.py  test_sessions.py  test_tasks.py
ttkbootstrap/: __init__.py  tooltip.py
ui/: __init__.py  app.py  bootstrap.py  icons.py  state.py
ui/_compat/: __init__.py  ttkbootstrap_stub.py
ui/services/: align.py  sessions.py  tasks.py
ui/views/: align.py  base.py  bench.py  logs.py  results.py  sessions.py  settings.py  sidebar.py  transcribe.py
ui/widgets/: dialogs.py  forms.py  statusbar.py  tables.py  textutil.py
